Init config rate limit

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,12 +4,12 @@ services:
     image: redis:6
     ports:
       - "6379:6379"
-  app:
-    build: .
-    command: go run ./cmd/server/main.go
-    ports:
-      - "8080:8080"
-    depends_on:
-      - redis
-    environment:
-      - REDIS_URL=redis:6379
+  #app:
+  #  build: .
+  #  command: go run ./cmd/server/main.go
+  #  ports:
+  #    - "8080:8080"
+  #  depends_on:
+  #    - redis
+  #  environment:
+  #    - REDIS_URL=redis:6379
